# langflow

./: .achecker.yml  .coderabbit.yaml  .cursor-config.json  .cursorrules  .dockerignore  .editorconfig  .env  .env-file  .env.clerk.example  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .test-starter-projects-validation.py  .uvrc  .whitesource  1.10.0.html  1.8.0.html  1.9.0.html  365085a8-a90a-43f9-a779-f8769ec7eca1.html  404.html  AGENTIC_EXPERIENCE_ACTION_PLAN.md  AGENTS-example.md  AGENTS.md  AGENT_BUILDER_INTEGRATION_OVERVIEW.md  AGENT_ENHANCEMENTS_v2.md  API-Reference.html  ASSISTANT_UI_CHANGELOG.md  AUTPE-6153-IMPLEMENTATION-SUMMARY.md  AUTPE-6170-completion-report.md  AUTPE-6180-IMPLEMENTATION-SUMMARY.md  AUTPE-6199_IMPLEMENTATION_SUMMARY.md  AUTPE-6201_IMPLEMENTATION_SUMMARY.md  AUTPE-6204_IMPLEMENTATION_SUMMARY.md  AUTPE-6205_IMPLEMENTATION_SUMMARY.md  AUTPE-6206_IMPLEMENTATION_SUMMARY.md  AUTPE-6207_IMPLEMENTATION_SUMMARY.md  Av  (+589 more)
backend/: .gitignore  pyproject.toml
backend/src/: list_endpoints.py  signature.py  util.py
langflow-extra-providers/: .gitignore  README.md  pyproject.toml
langflow-extra-providers/langflow_extra_providers/: __init__.py  __main__.py  config.py  hook.py  patch.py
langflow/backend/: .gitignore  Dockerfile  allowed_components.py  app.py  build.Dockerfile  build_and_push  dev.py  endpoints.py  list_endpoints.py  payload.py  pyproject.toml  run  signature.py  util.py
langflow/backend/langflow_backend/: __init__.py  __main__.py  main.py  server.py
langflow/backend/langflow_backend/api/: endpoints.py  list_endpoints.py  signature.py
langflow/backend/langflow_backend/custom/: customs.py
langflow/backend/langflow_backend/interface/: listing.py  loading.py  run.py  signature.py  types.py
langflow/backend/langflow_backend/utils/: allowed_components.py  payload.py  util.py
langflow/backend/src/: main.py
langflow/backend/src/api/: endpoints.py  list_endpoints.py  signature.py
prototypes/mt-custom-components/: README.md  capability_variable_service.py  pyproject.toml
prototypes/mt-custom-components/flows/: basic_prompting.json
prototypes/mt-custom-components/runtime_api/: auth.py  main.py  store.py
prototypes/mt-custom-components/scripts/: orchestrator.py  per_vertex_plan.py  run.sh  worker.py
ragstack/libs/core/: .env.template  Makefile  README.md  pyproject.toml
src/backend/base/: AUTPE-6242-implementation-summary.md  CRITICAL_ARCHITECTURAL_VIOLATIONS_REPORT.md  DEVELOPMENT-GUIDE.md  README.md  SIMPLIFIED_FRAMEWORK_IMPLEMENTATION_REPORT.md  SPECIFICATION_FRAMEWORK_SIMPLIFICATION_PLAN.md  component_discovery_test_results.json  comprehensive_framework_test_results.json  debug_component_discovery.py  discovery_fixes_summary.md  focused_test_results.json  framework_success_report.json  framework_success_report.py  framework_test_report.json  framework_test_summary.md  missing_database_mappings_migration.py  pyproject.toml  simplified_framework_test_results.json  steps.md  test_comprehensive_framework.py  test_database_driven_discovery.py  test_enhanced_framework.py  test_eoc_validation.py  test_framework_focused.py  test_simple_component_discovery.py  test_simple_spec.yaml  test_simplified_framework.py  test_working_example.py  validate_simplified_framework.py
src/backend/base/examples/: README.md  advanced-multi-agent.yaml  crewai-workflow.yaml  healthcare-agent.yaml  simple-agent.yaml
src/backend/base/graph/: __init__.py
src/backend/base/helpers/: record.py
src/backend/base/initial_setup/: setup.py
src/backend/base/langflow/: .gitignore  __init__.py  __main__.py  alembic.ini  cli.py  component_creation_context.md  config.yaml  custom.py  fix_imports.py  langflow-pre.db  langflow-pre.db-shm  langflow-pre.db-wal  langflow_launcher.py  load.py  main.py  main_backend_only.py  main_with_frontend.py  memory.py  middleware.py  plugin_routes.py  preload.py  server.py  settings.py  worker.py
src/backend/base/langflow_base/: __init__.py  __main__.py  main.py  memory.py  settings.py  worker.py
src/backend/base/tests/: __init__.py  conftest.py
src/backend/langflow/: __init__.py  __main__.py  alembic.ini  component_config.yaml  config.yaml  lcserve.py  login.py  main.py  memory.py  pyproject.toml  schema.py  server.py  settings.py  slack_app.py  worker.py
src/backend/langflow-base/: pyproject.toml
src/backend/langflow-base/langflow/: __main__.py
src/backend/langflow-keycloak-sso/: pyproject.toml
src/backend/langflow/alembic/: env.py  script.py.mako
src/backend/langflow/api/: base.py  (+12 more)
src/backend/saas/: alembic.ini  pyproject.toml
src/bundles/adanos/: README.md  pyproject.toml
src/bundles/altk/: README.md  pyproject.toml
src/bundles/anthropic/: README.md  pyproject.toml
src/bundles/apify/: README.md  pyproject.toml
src/bundles/arxiv/: README.md  pyproject.toml
src/bundles/azure/: README.md  pyproject.toml
src/bundles/azure-ai-foundry/: README.md  pyproject.toml
src/bundles/cassandra/: README.md  pyproject.toml
src/bundles/cometapi/: README.md  pyproject.toml
src/bundles/crewai/: README.md  pyproject.toml
src/bundles/cuga/: README.md  pyproject.toml
src/bundles/dakera/: README.md  pyproject.toml
src/langflow-api/: README.md  pyproject.toml
src/langflow-core/: README.md  pyproject.toml
src/langflow-schema/: pyproject.toml
src/langflow-services/: OWNERSHIP.md  README.md  pyproject.toml
src/langflow-stepflow/: README.md  pyproject.toml
src/langflow-stepflow/tests/: conftest.py
src/lfx/: LFX_MCP.md  Makefile  PLUGGABLE_SERVICES.md  README.md  agent-local.json  agent.json  chat-with-key.json  chat.json  lfx.toml.example  pyproject.toml  pytest.ini  travel.json
src/lfx/deploy/: README.md  lfx.toml
src/lfx/docker/: Dockerfile  Dockerfile.dev
src/lfx/tests/: __init__.py  conftest.py
src/sdk/: Makefile  langflow-environments.toml.example  pyproject.toml
src/sdk/tests/: test_background_job.py  test_client_aliases.py  test_file_io.py  test_models.py  test_push.py  test_serialization.py  test_streaming.py  test_testing.py
(+32538 files in other folders)
