[tool.poetry]
name = "expert-backend"
version = "0.0.3"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
beautifulsoup4 = "^4.11.2"
google-search-results = "^2.4.1"
google-api-python-client = "^2.79.0"
langchain = {path = "../langchain", develop = true}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
